# cisco-solution-

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
contracts_data/dummy_contracts/: README.md  contract_index.csv  contract_index.json  dummy-001_master_oem_software_license_agreement.md  dummy-002_settlement_and_restated_oem_agreement.md  dummy-003_distribution_addendum_no_12.md  dummy-004_evaluation_agreement_for_core_code_library.md  dummy-005_software_license_agreement.md  dummy-006_amendment_no_9_to_oem-in_software_license_agreement.md  dummy-007_amendment_no_18_to_audio_codec_software_license_agreement.md  dummy-008_amendment_no_26_to_master_agreement.md  dummy-009_amendment_no_2_to_solutionsplus_agreement.md  dummy-010_amendment_no_3_to_software_agreement.md  dummy-011_final_executed_oem_agreement.md  dummy-012_amendment_no_3_to_solutionsplus_agreement.md  dummy-013_commercial_terms_addendum_to_core_supplier_base_agreement.md  dummy-014_amendment_no_4_to_solutionsplus_agreement.md  dummy-015_amendment_no_4_to_application_license_agreement_for_isvs.md  dummy-016_legacy_perpetual_license_and_support_agreement.md  dummy-017_hosted_services_and_data_processing_addendum.md  dummy-018_royalty-bearing_codec_integration_agreement.md  dummy-019_source_code_escrow_and_maintenance_addendum.md  (+1 more)
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
prompts/: comparison_prompt.md  extraction_prompt.md
src/: pipeline.py
standards/: cisco_security_clause.md  commercial_exposure.md  royalty_terms.md
(+32 files in other folders)
